# python-algorithm-workbook

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: document.yml
data_structure/intro/: index.html
data_structure/stack/: index.html
docs/: index.md
docs/data_structure/: intro.md  stack.md
problems/data_structure/: 10828.py  18258.py  9012.py
search/: search_index.json
